--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -65,6 +65,7 @@ executable potato-cactus
                    PotatoCactus.Network.Packets.Out.NpcUpdate.EncodeSecondaryNpcHitUpdateBlock
                    PotatoCactus.Network.Packets.Out.PlayerInteractionPacket
                    PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeBlock
+                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeAnimationBlock
                    PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeAppearanceBlock
                    PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodePrimaryHitUpdateBlock
                    PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeChatUpdate
@@ -122,6 +123,7 @@ executable potato-cactus
                    PotatoCactus.Game.PlayerUpdate.Equipment
                    PotatoCactus.Game.PlayerUpdate.UpdateMask
                    PotatoCactus.Game.PlayerUpdate.PlayerUpdate
+                   PotatoCactus.Game.PlayerUpdate.PlayerAnimationDefinitions
                    PotatoCactus.Game.PlayerUpdate.ProcessPlayerUpdate
                    PotatoCactus.Game.Position
                    PotatoCactus.Game.Scripting.Events.ApplyScriptActionResult
@@ -140,6 +142,7 @@ executable potato-cactus
                    PotatoCactus.Game.Reducer
                    PotatoCactus.Config.Constants
                    PotatoCactus.Persistence.PlayerRepository
+                   PotatoCactus.Utils.Flow
                    PotatoCactus.Utils.Iterable
                    PotatoCactus.Utils.Logging
 
