--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -34,6 +34,7 @@ executable potato-cactus
                    PotatoCactus.Client.GameObjectUpdate.GameObjectUpdateDiff
                    PotatoCactus.Client.LocalEntityList
                    PotatoCactus.Client.PlayerInit
+                   PotatoCactus.Interop.ScriptEngineProcess
                    PotatoCactus.Network.Encoding.ChatMessageEncoding
                    PotatoCactus.Network.SocketHandler
                    PotatoCactus.Network.InboundPacketMapper
@@ -127,6 +128,9 @@ executable potato-cactus
                    PotatoCactus.Game.PlayerUpdate.PlayerAnimationDefinitions
                    PotatoCactus.Game.PlayerUpdate.ProcessPlayerUpdate
                    PotatoCactus.Game.Position
+                   PotatoCactus.Game.Scripting.Bridge.Communication
+                   PotatoCactus.Game.Scripting.Bridge.MapEvents
+                   PotatoCactus.Game.Scripting.Bridge.MapResults
                    PotatoCactus.Game.Scripting.Events.ApplyScriptActionResult
                    PotatoCactus.Game.Scripting.Events.CreateGameEvents
                    PotatoCactus.Game.Scripting.Events.NpcEvents
@@ -149,7 +153,7 @@ executable potato-cactus
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers
+    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers, aeson, process
     hs-source-dirs:   app
     default-language: Haskell2010
     ghc-options:
