item on object interaction

--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -44,6 +44,7 @@ executable potato-cactus
                    PotatoCactus.Network.Packets.In.ContinueDialoguePacket
                    PotatoCactus.Network.Packets.In.EquipItemPacket
                    PotatoCactus.Network.Packets.In.ItemContainerClickPacket
+                   PotatoCactus.Network.Packets.In.ItemOnObjectPacket
                    PotatoCactus.Network.Packets.In.NpcActionPacket
                    PotatoCactus.Network.Packets.In.NpcAttackPacket
                    PotatoCactus.Network.Packets.In.ObjectActionPacket
@@ -121,6 +122,7 @@ executable potato-cactus
                    PotatoCactus.Game.ItemContainer
                    PotatoCactus.Game.Message.EquipItemMessagePayload
                    PotatoCactus.Game.Message.GameChannelMessage
+                   PotatoCactus.Game.Message.ItemOnObjectPayload
                    PotatoCactus.Game.Message.ObjectClickPayload
                    PotatoCactus.Game.Message.RegisterClientPayload
                    PotatoCactus.Game.Movement.Direction
@@ -200,6 +202,6 @@ executable potato-cactus
 test-suite tests
     type: exitcode-stdio-1.0
     main-is: Main.hs
-    build-depends: HUnit ^>=1.6, base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers
+    build-depends: HUnit ^>=1.6, base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers, aeson
     hs-source-dirs: tests, app
     default-language: Haskell2010
