varp helper to get/set values from scripting engine

--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -181,6 +181,7 @@ executable potato-cactus
                    PotatoCactus.Game.Scripting.Bridge.Serialization.Models.PlayerAttackDto
                    PotatoCactus.Game.Scripting.Bridge.Serialization.Models.PlayerDto
                    PotatoCactus.Game.Scripting.Bridge.Serialization.Models.PositionDto
+                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.VarpsetDto
                    PotatoCactus.Game.Scripting.Bridge.Serialization.Models.WorldDto
                    PotatoCactus.Game.Scripting.BuiltinGameEventProcessor
                    PotatoCactus.Game.Scripting.Events.ApplyScriptActionResult
