--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -32,6 +32,7 @@ executable potato-cactus
                    PotatoCactus.Client.ClientUpdate
                    PotatoCactus.Client.GameObjectUpdate.EncodeGameObjectUpdate
                    PotatoCactus.Client.GameObjectUpdate.GameObjectUpdateDiff
+                   PotatoCactus.Client.GameObjectUpdate.GameObjectUpdateOperations
                    PotatoCactus.Client.GroundItemsUpdate.EncodeGroundItemsUpdate
                    PotatoCactus.Client.GroundItemsUpdate.GroundItemsUpdateDiff
                    PotatoCactus.Client.Interface.EncodeInterfaceUpdate
