--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -122,6 +122,7 @@ executable potato-cactus
                    PotatoCactus.Game.Definitions.GameObjectDefinitions
                    PotatoCactus.Game.Definitions.ItemDefinitions
                    PotatoCactus.Game.Definitions.NpcDefinitions
+                   PotatoCactus.Game.Definitions.Parser.GameObjectPlacementParser
                    PotatoCactus.Game.Definitions.Parser.ItemDefinitionParser
                    PotatoCactus.Game.Definitions.Parser.ObjectDefinitionParser
                    PotatoCactus.Game.Definitions.StaticGameObjectSet
@@ -207,7 +208,7 @@ executable potato-cactus
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers, aeson, process
+    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers, aeson, process, directory
     hs-source-dirs:   app
     default-language: Haskell2010
     ghc-options:
