rework main dynamic object logic into separate TileObjects structure

--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -118,6 +118,7 @@ executable potato-cactus
                    PotatoCactus.Game.Entity.Object.DynamicObjectCollection
                    PotatoCactus.Game.Entity.Object.GameObject
                    PotatoCactus.Game.Entity.Object.GameObjectKey
+                   PotatoCactus.Game.Entity.Object.TileObjects
                    PotatoCactus.Game.Definitions.EquipmentDefinitions
                    PotatoCactus.Game.Definitions.GameObjectDefinitions
                    PotatoCactus.Game.Definitions.ItemDefinitions
