refactor interaction target existence logic out of advanceInteraction

--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -107,6 +107,7 @@ executable potato-cactus
                    PotatoCactus.Game.Entity.EntityData
                    PotatoCactus.Game.Entity.GroundItem.GroundItem
                    PotatoCactus.Game.Entity.GroundItem.GroundItemCollection
+                   PotatoCactus.Game.Entity.Interaction.AdvanceInteractionDeps
                    PotatoCactus.Game.Entity.Interaction.Interaction
                    PotatoCactus.Game.Entity.Interaction.State
                    PotatoCactus.Game.Entity.Interaction.Target
