remove MovementEntity container type

--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -149,8 +149,7 @@ executable potato-cactus
                    PotatoCactus.Game.Message.RegisterClientPayload
                    PotatoCactus.Game.Movement.Direction
                    PotatoCactus.Game.Movement.InterpolatePath
-                   PotatoCactus.Game.Movement.MovementEntity
-                   PotatoCactus.Game.Movement.PlayerWalkMovement
+                   PotatoCactus.Game.Movement.PlayerMovement
                    PotatoCactus.Game.Movement.PathPlanner
                    PotatoCactus.Game.Movement.PositionXY
                    PotatoCactus.Game.Movement.StaticMovement
