--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -150,7 +150,7 @@ executable potato-cactus
                    PotatoCactus.Game.Movement.Direction
                    PotatoCactus.Game.Movement.InterpolatePath
                    PotatoCactus.Game.Movement.PlayerMovement
-                   PotatoCactus.Game.Movement.Pathing.CollisionMap
+                   PotatoCactus.Game.Movement.Pathing.TileFlagsMap
                    PotatoCactus.Game.Movement.Pathing.MovementFlags
                    PotatoCactus.Game.Movement.Pathing.PathPlanner
                    PotatoCactus.Game.Movement.PositionXY
