--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -150,9 +150,10 @@ executable potato-cactus
                    PotatoCactus.Game.Movement.Direction
                    PotatoCactus.Game.Movement.InterpolatePath
                    PotatoCactus.Game.Movement.PlayerMovement
-                   PotatoCactus.Game.Movement.Pathing.TileFlagsMap
+                   PotatoCactus.Game.Movement.Pathing.CollisionMap
                    PotatoCactus.Game.Movement.Pathing.MovementFlags
                    PotatoCactus.Game.Movement.Pathing.PathPlanner
+                   PotatoCactus.Game.Movement.Pathing.TileFlagsMap
                    PotatoCactus.Game.Movement.PositionXY
                    PotatoCactus.Game.Movement.StaticMovement
                    PotatoCactus.Game.Movement.WalkingStep
