--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -151,6 +151,7 @@ executable potato-cactus
                    PotatoCactus.Game.Movement.InterpolatePath
                    PotatoCactus.Game.Movement.PlayerMovement
                    PotatoCactus.Game.Movement.Pathing.CollisionMap
+                   PotatoCactus.Game.Movement.Pathing.CollisionMapBuilder
                    PotatoCactus.Game.Movement.Pathing.MovementFlags
                    PotatoCactus.Game.Movement.Pathing.PathPlanner
                    PotatoCactus.Game.Movement.Pathing.TileFlagsMap
