disabling threaded compile flag as it seems to cause performance issues with GC

--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -224,7 +224,8 @@ executable potato-cactus
       -Werror
       -fwarn-incomplete-patterns
       -O3
-      -threaded
+      -- -threaded
+      -- -rtsopts
 
 test-suite tests
     type: exitcode-stdio-1.0
