include dynamic objects in collision map computation and recompute dirty regions every tick

--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -124,6 +124,7 @@ executable potato-cactus
                    PotatoCactus.Game.Entity.Object.DynamicObject
                    PotatoCactus.Game.Entity.Object.DynamicObjectCollection
                    PotatoCactus.Game.Entity.Object.GameObject
+                   PotatoCactus.Game.Entity.Object.HierarchicalObjectReconciliation
                    PotatoCactus.Game.Entity.Object.TileObjects
                    PotatoCactus.Game.Definitions.EquipmentDefinitions
                    PotatoCactus.Game.Definitions.GameObjectDefinitions
